--- a/ELECTROHON.html
+++ b/ELECTROHON.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class=" navbar ourproject col-md-3">
                         <li class="navbar-item">
-                            <a href="#" class="navbar-link">OUR PROJECT</a>
+                            <a href="OUR PROJECT.html" class="navbar-link">OUR PROJECT</a>
                         </li>
                     </div>
                     <div class=" navbar team col-md-3">
@@ -37,7 +37,7 @@
                     </div>
                     <div class=" navbar feedback col-md-3">
                         <li class="navbar-item">
-                            <a href="#" class="navbar-link">FEEDBACK</a>
+                            <a href="FEEDBACK.html" class="navbar-link">FEEDBACK</a>
                         </li>
                     </div>  
                 </div>
